--- a/new/index.html
+++ b/new/index.html
@@ -14,7 +14,7 @@
 		<link rel="shortcut icon" href="favicon.ico" type="images/x-icon" />
 		<link rel="bookmark" href="favicon.ico" />
 		
-		<title>web frame</title>
+		<title>广州启诚纸质制品</title>
 		<!--[if lt IE 9 ]>
             <script src="js/hack/html5shiv.js"></script>
         <![endif]-->
@@ -31,9 +31,13 @@
 		<!-- header[[ -->
 		<header class="header">
 		    <div class="w ofh">
+              <div class="logo_wrap">
 		        <a class="fl logo" href="index.html">
 		            <img src="images/logo_white.png" alt="广州启诚纸质制品实业有限公司" class="img">
 		        </a>
+		        <h1 class="title">广州启诚纸质制品实业有限公司</h1>
+		        <h2 class="banner_txt">让你放心把包装交给我改!</h2>
+		      </div>
 		        <nav class="nav_mian fr">
 		            <a class="link" href="index.html" ><span class="hover">首页</span></a>
 		            <a class="link" href="product.html"><span class="hover">产品展示</span></a>
