--- a/new/index.html
+++ b/new/index.html
@@ -86,7 +86,7 @@
         <!-- banner index]] -->
         
         <!-- 合作客户[[ -->
-        <div class="w cooperative">
+        <div class="w cooperative_index">
 <!--            <p class="title">合作客户</p>-->
             <ul class="wrap">
                 <li class="list title">合作客户</li>
