--- a/index.html
+++ b/index.html
@@ -1041,13 +1041,13 @@
                     <p class='copy_info'>Copyright &copy; 2013 All XXXXXXXXXXX</p>
                 </ul>
                 <div class="logo"><img src="images/logo_white.png" alt=""></div>
-<!--                <div class="fr">-->
+                <div class="fr">
                     <div class="fr contact">
                         <h1 class="title"><span><img src="images/bg_footer.png" alt=""></span>联系我们</h1>
                         <p>联系电话：020-21524154</p>
                         <p>联系地址：广州市越秀区XX路XX号</p>
                     </div>
-<!--                </div>-->
+                </div>
                 
                 
             </div>
