--- a/new/news.html
+++ b/new/news.html
@@ -52,7 +52,7 @@
 
        
         <!-- 内容[[ -->
-        <div class="mian_content sub_w product">
+        <div class="mian_content sub_w news">
             <div class="sub_banner">
                 <h1 class="title">产品展示</h1>
                 <h2 class="title_en">product display</h2>
@@ -99,7 +99,7 @@
                 </nav>
                 
                 <div class="mian_content_r fr">
-                    <ul class="product_lists">
+                    <ul class="news_lists">
                         <li class="list">
                             <a href="" class="link">
                                 <img src="images/product/img_001_242x136.png" alt="" class="img">
