--- a/new/case.html
+++ b/new/case.html
@@ -5,6 +5,7 @@
 
 		<meta name="Keywords" content="">
 		<meta name="description" content="">
+		<meta name="author" content="流星的泪痕 QQ:61955365"/>
 		
 		<!-- 启用360浏览器的极速模式(webkit)-->
         <meta name="renderer" content="webkit">          
