--- a/new/news.html
+++ b/new/news.html
@@ -5,6 +5,7 @@
 
 		<meta name="Keywords" content="">
 		<meta name="description" content="">
+		<meta name="author" content="流星的泪痕 QQ:61955365"/>
 		
 		<!-- 启用360浏览器的极速模式(webkit)-->
         <meta name="renderer" content="webkit">          
@@ -54,8 +55,8 @@
         <!-- 内容[[ -->
         <div class="mian_content sub_w news">
             <div class="sub_banner">
-                <h1 class="title">产品展示</h1>
-                <h2 class="title_en">product display</h2>
+                <h1 class="title">新闻动态</h1>
+                <h2 class="title_en">news</h2>
             </div>
             <div class="content_wrap">
                 <nav class="sub_nav fl">
@@ -101,11 +102,14 @@
                 <div class="mian_content_r fr">
                     <ul class="news_lists">
                         <li class="list">
-                            <a href="" class="link">
+                            
                                 <img src="images/product/img_001_242x136.png" alt="" class="img">
+                            <a href="" class="link">
+                                <h1 class="title">包装1</h1>
+                                <p class="describe">包装精致，优秀，耐扯。包装精致，优秀，耐扯。</p>
+                                <time class="time">14-11-03 11:11</time>
                             </a>
-                            <h1 class="title">包装1</h1>
-                            <p class="describe">包装精致，优秀，耐扯。包装精致，优秀，耐扯。</p>
+                            
                         </li>
                         <li class="list">
                             <a href="" class="link">
