--- a/new/index.html
+++ b/new/index.html
@@ -225,7 +225,7 @@
         
         <!-- contact_info_index[[ -->
         <div class="w contact_info_index ofh">
-            <ul class="wrap mr form">
+            <ul class="wrap mr mod_form">
                 <li class="title">马上联系我们获取更多优惠</li>
                 <li><input type="text" class="name" value="姓名"></li>
                 <li><input type="text" class="phone" value="电话"></li>
